# depopulate-fair-plan

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: build-and-deploy.yml  deploy-web.yml
config/: county_senate_district_crosswalk.csv  export_contract.json  senate_members.csv  sources.toml
insights/: senate_district_fair_plan_analysis.md
scripts/: build_crosswalk.py
site/: build.py
src/fairplan/: __init__.py  cli.py  fetch.py  io_utils.py  manifest.py  models.py  parsers.py  pipeline.py
tests/: test_parsers.py
tests/golden/: expected_metrics.json
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: CNAME
web/public/data/: california_county_data.csv  site_stats.json
web/scripts/: sync-data.sh
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/sections/: CountyTable.tsx  CrisisMap.tsx  CrisisStats.tsx  Footer.tsx  Header.tsx  Hero.tsx  Signup.tsx  Solutions.tsx
web/src/components/ui/: button.tsx  card.tsx
web/src/lib/: data.ts  utils.ts
